--- a/Code/Python/Pellet_sorter_py/Example_using_pellet_sorter.ipynb
+++ b/Code/Python/Pellet_sorter_py/Example_using_pellet_sorter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "b82084df-b333-4aaa-88f8-334ee537c9c9",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "344f84b8-970c-4ba8-9676-7b3b308142be",
    "metadata": {
     "tags": []
@@ -142,7 +142,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "0e8a5d15-f4e0-430a-841c-6a27f4d691d3",
    "metadata": {
     "tags": []
@@ -169,7 +169,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "4719e966-2019-45f7-9b40-2bc8a4535591",
    "metadata": {
     "tags": []
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "c45eef8b-e721-4868-a3fc-e8b8e844b95a",
    "metadata": {
     "tags": []
@@ -217,17 +217,9 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 2.012  kg\n",
-      "AUNG/W+ 3.486  kg\n",
-      "ASNG/W+ 2.748  kg\n",
+      "AUNG/W+ 0.596  kg\n",
+      "AUNG/W+ 2.790  kg\n",
+      "ASNG/W+ 2.720  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -244,12 +236,9 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.290  kg\n",
-      "AUNG/W+ 1.298  kg\n",
-      "ASNG/W+ 1.312  kg\n",
+      "AUNG/W+ 0.000  kg\n",
+      "AUNG/W+ 0.952  kg\n",
+      "ASNG/W+ 1.040  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -262,7 +251,6 @@
       "pos finished\n",
       "Opening valve\n",
       "val finished\n",
-      "NG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
@@ -290,9 +278,13 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.092  kg\n",
-      "AUNG/W+ 2.230  kg\n",
-      "ASNG/W+ 1.982  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "AUNG/W+ 1.108  kg\n",
+      "AUNG/W+ 1.476  kg\n",
+      "ASNG/W+ 1.486  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -317,19 +309,9 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.084  kg\n",
-      "AUNG/W+ 1.304  kg\n",
-      "AUNG/W+ 1.326  kg\n",
-      "AUNG/W+ 1.316  kg\n",
-      "ASNG/W+ 1.270  kg\n",
+      "AUNG/W+ 0.440  kg\n",
+      "AUNG/W+ 1.022  kg\n",
+      "ASNG/W+ 1.178  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -347,41 +329,9 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.812  kg\n",
-      "ASNG/W+ 2.448  kg\n",
+      "AUNG/W+ 0.000  kg\n",
+      "AUNG/W+ 0.302  kg\n",
+      "ASNG/W+ 0.342  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -394,37 +344,14 @@
       "pos finished\n",
       "Opening valve\n",
       "val finished\n",
-      "\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 0.826  kg\n",
-      "AUNG/W+ 1.132  kg\n",
-      "AUNG/W+ 1.308  kg\n",
-      "AUNG/W+ 1.304  kg\n",
-      "ASNG/W+ 1.296  kg\n",
+      "AUNG/W+ 1.022  kg\n",
+      "AUNG/W+ 1.970  kg\n",
+      "ASNG/W+ 2.004  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -444,22 +371,9 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.836  kg\n",
-      "ASNG/W+ 2.432  kg\n",
+      "AUNG/W+ 0.726  kg\n",
+      "AUNG/W+ 2.000  kg\n",
+      "ASNG/W+ 2.152  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -478,9 +392,12 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 0.052  kg\n",
-      "AUNG/W+ 1.142  kg\n",
-      "ASNG/W+ 1.208  kg\n",
+      "AUNG/W+ 0.002  kg\n",
+      "AUNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "AUNG/W+ 0.868  kg\n",
+      "AUNG/W+ 1.616  kg\n",
+      "ASNG/W+ 1.734  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -511,11 +428,25 @@
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
       "ASNG/W+ 0.000  kg\n",
-      "AUNG/W+ 1.690  kg\n",
-      "AUNG/W+ 2.332  kg\n",
-      "AUNG/W+ 2.386  kg\n",
-      "AUNG/W+ 2.180  kg\n",
-      "ASNG/W+ 2.152  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "ASNG/W+ 0.000  kg\n",
+      "AUNG/W+ 0.000  kg\n",
+      "AUNG/W+ 0.062  kg\n",
+      "ASNG/W+ 0.762  kg\n",
       "Closing valve\n",
       "val finished\n",
       "pos finished\n",
@@ -523,19 +454,8 @@
       "val finished\n",
       "PURGING.......................................................................\n",
       "Closing valve\n",
-      "val finished\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "waitForSerialStr() missing 1 required positional argument: 'arduino'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m### MAIN SCRIPT\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfill_tray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtray_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43msorter_parameters\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlength_mm\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msorter_parameters\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msorter_parameters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msorter_chain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marduino\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbalance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpurge_slot\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Pellet_sorter/Code/Python/Pellet_sorter_py/pellet_sorter.py:395\u001b[0m, in \u001b[0;36mfill_tray\u001b[0;34m(tray, cartesian_initial, sorter_parameters, sorter_chain, arduino, balance, purge_slot)\u001b[0m\n\u001b[1;32m    393\u001b[0m IK_plot(cartesian_initial, cartesian_prev, sorter_parameters, sorter_chain)\n\u001b[1;32m    394\u001b[0m goToCartesianFrom(cartesian_initial, cartesian_prev, sorter_parameters, sorter_chain, arduino)\n\u001b[0;32m--> 395\u001b[0m \u001b[43mwaitForSerialStr\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpos finished\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: waitForSerialStr() missing 1 required positional argument: 'arduino'"
+      "val finished\n",
+      "pos finished\n"
      ]
     },
     {
